--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,6 +26,7 @@ COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY backend/requirements.txt /app/backend/requirements.txt
 COPY backend/rag_ollama_faiss.py /app/backend/rag_ollama_faiss.py
 COPY backend/gunicorn.conf.py /app/backend/gunicorn.conf.py
+COPY backend /app/backend
 
 # 安装 Python 依赖
 WORKDIR /app/backend
@@ -34,20 +35,22 @@ RUN pip install --no-cache-dir -r requirements.txt
 # 复制前端构建文件
 COPY --from=frontend-builder /app/frontend/build /usr/share/nginx/html
 
-# 创建数据目录
-RUN mkdir -p /app/data
+# 创建数据和日志目录
+RUN mkdir -p /app/data /app/backend/logs
+# 确保 Nginx 目录存在（某些精简镜像默认不创建缓存目录）
+RUN mkdir -p /var/cache/nginx /var/log/nginx /var/lib/nginx/body /run/nginx
 
 # 创建非 root 用户
 RUN groupadd -r appuser && useradd -r -g appuser appuser
-RUN chown -R appuser:appuser /app /usr/share/nginx/html /var/log/nginx /var/cache/nginx
+RUN chown -R appuser:appuser /app /usr/share/nginx/html /var/log/nginx /var/cache/nginx /var/lib/nginx /run/nginx
+
+# 启动脚本（以 root 设置可执行权限）
+COPY docker-entrypoint.sh /app/docker-entrypoint.sh
+RUN chmod +x /app/docker-entrypoint.sh
 
 USER appuser
 
 # 暴露端口
-EXPOSE 80
-
-# 启动脚本
-COPY docker-entrypoint.sh /app/docker-entrypoint.sh
-RUN chmod +x /app/docker-entrypoint.sh
+EXPOSE 8080
 
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
