--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,5 @@
+pid /run/nginx/nginx.pid;
+
 events {
     worker_connections 1024;
 }
@@ -19,7 +21,7 @@ http {
     }
 
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
 
         # 前端静态文件
