--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,34 +6,11 @@ services:
       context: .
       dockerfile: backend/Dockerfile
     ports:
-      - "8080:80"  # 前端访问端口
+      - "8080:8080"  # 前端访问端口
       - "8911:8911"  # 后端 API 端口（可选，用于调试）
     volumes:
       - ./data:/app/data  # 持久化账单数据
     environment:
       - DATA_DIR=/app/data
-      - OLLAMA_BASE_URL=http://ollama:11434
-    depends_on:
-      - ollama
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
     restart: unless-stopped
-
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    environment:
-      - OLLAMA_HOST=0.0.0.0
-      - OLLAMA_NUM_PARALLEL=4
-    restart: unless-stopped
-    command: sh -c "
-      ollama serve & 
-      sleep 10 && 
-      ollama pull nomic-embed-text && 
-      ollama pull qwen3:4b && 
-      wait
-    "
-
-volumes:
-  ollama_data:
