LangChain does not work fine in the Docker container

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;  # 错误日志，级别：warn
 
     # 后端 Flask 服务
     upstream backend {
@@ -39,6 +40,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 增加超时时间以支持长时间运行的 LLM 请求（平均 40 秒）
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 180s;
+            proxy_read_timeout 180s;  # 读取响应超时（3 分钟，足够处理 40 秒的请求）
         }
 
         # 单独的 API 路由（不带 /api 前缀）
@@ -48,6 +54,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 增加超时时间以支持长时间运行的 LLM 请求（平均 40 秒）
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 180s;
+            proxy_read_timeout 180s;  # 读取响应超时（3 分钟，足够处理 40 秒的请求）
         }
 
         # 错误页面
